--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ importFrom(checkmate,assert)
 importFrom(future,multisession)
 importFrom(future,plan)
 importFrom(future.apply,future_lapply)
+importFrom(methods,is)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_transform)
 importFrom(terra,buffer)
