solve issues for devtools::check()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ importFrom(magrittr,"%>%")
 importFrom(methods,is)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_transform)
+importFrom(stats,na.omit)
 importFrom(terra,as.matrix)
 importFrom(terra,buffer)
 importFrom(terra,crop)
@@ -42,4 +43,5 @@ importFrom(terra,res)
 importFrom(terra,unique)
 importFrom(terra,viewshed)
 importFrom(terra,writeRaster)
+importFrom(utils,write.csv)
 useDynLib(CGEI, .registration = TRUE)
