Updated namespace & vgvi manual

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,12 @@ importFrom(ggplot2,theme_minimal)
 importFrom(magrittr,"%>%")
 importFrom(methods,is)
 importFrom(sf,st_as_sf)
+importFrom(sf,st_cast)
+importFrom(sf,st_geometry_type)
+importFrom(sf,st_line_sample)
+importFrom(sf,st_set_geometry)
 importFrom(sf,st_transform)
+importFrom(sf,st_union)
 importFrom(stats,na.omit)
 importFrom(terra,as.matrix)
 importFrom(terra,buffer)
