--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,10 +13,11 @@ importFrom(checkmate,testCharacter)
 importFrom(checkmate,testClass)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,everything)
+importFrom(dplyr,mutate)
+importFrom(dplyr,relocate)
+importFrom(dplyr,rename)
 importFrom(dplyr,tibble)
-importFrom(future,multisession)
-importFrom(future,plan)
-importFrom(future.apply,future_lapply)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_line)
@@ -29,8 +30,14 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
 importFrom(magrittr,"%>%")
 importFrom(methods,is)
+importFrom(raster,raster)
 importFrom(sf,st_as_sf)
+importFrom(sf,st_as_sfc)
+importFrom(sf,st_bbox)
+importFrom(sf,st_buffer)
 importFrom(sf,st_cast)
+importFrom(sf,st_coordinates)
+importFrom(sf,st_crs)
 importFrom(sf,st_geometry_type)
 importFrom(sf,st_line_sample)
 importFrom(sf,st_set_geometry)
@@ -38,15 +45,21 @@ importFrom(sf,st_transform)
 importFrom(sf,st_union)
 importFrom(stats,na.omit)
 importFrom(terra,as.matrix)
-importFrom(terra,buffer)
+importFrom(terra,cellFromXY)
+importFrom(terra,colFromX)
 importFrom(terra,crop)
-importFrom(terra,distance)
+importFrom(terra,crs)
 importFrom(terra,extract)
+importFrom(terra,mask)
 importFrom(terra,nlyr)
 importFrom(terra,rast)
 importFrom(terra,res)
+importFrom(terra,rowFromY)
 importFrom(terra,unique)
-importFrom(terra,viewshed)
+importFrom(terra,vect)
 importFrom(terra,writeRaster)
+importFrom(terra,xyFromCell)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
 importFrom(utils,write.csv)
 useDynLib(CGEI, .registration = TRUE)
