--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,7 @@ LinkingTo:
     Rcpp,
     RcppProgress
 Suggests: 
+    ggpubr,
     testthat (>= 3.0.0)
 RoxygenNote: 7.3.1
 Config/testthat/edition: 3
