vvi: include mode = "cumulative"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n_distinct)
 importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
 importFrom(dplyr,tibble)
