--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
 importFrom(sf,st_geometry_type)
 importFrom(sf,st_line_sample)
+importFrom(sf,st_nearest_feature)
 importFrom(sf,st_set_geometry)
 importFrom(sf,st_transform)
 importFrom(sf,st_union)
