--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ URL: https://github.com/STBrinkmann/CGEI
 BugReports: https://github.com/STBrinkmann/CGEI/issues
 Imports: 
     checkmate,
+    classInt,
     dplyr,
     ggplot2,
     magrittr,
